# oak-dual-camera-server

./: .dockerignore  .gitignore  Dockerfile.template  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
s3_upload/: Dockerfile.template  requirements.txt  s3uploader.py  start.sh
src/rpi_dual_cam_server/: __init__.py  cam_server.py
static/: main.js
templates/: index.html
tests/: test_cam_server.py  test_s3uploader.py
wifi-connect/: Dockerfile.template
