[project]
name = "rpi-dual-cam-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "siddhi47", email = "siddhi.47.skb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click==8.1.7",
    "depthai>=2.30.0.0",
    "flask==3.0.3",
    "gevent==24.2.1",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "loguru>=0.7.3",
    "opencv-python-headless==4.12.0.88",
    "werkzeug==3.0.3",
]

[project.scripts]
rpi-dual-cam-server = "rpi_dual_cam_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
